--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon">🟢</div>
-                    <div class="stat-value" id="servers-online">-</div>
+                    <div class="stat-value" id="servers-online">0</div>
                     <div class="stat-label">Servers Online</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">🤖</div>
-                    <div class="stat-value" id="bots-active">-</div>
+                    <div class="stat-value" id="bots-active">0</div>
                     <div class="stat-label">Bots Active</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">⚔️</div>
-                    <div class="stat-value" id="bots-spawned">-</div>
+                    <div class="stat-value" id="bots-spawned">0</div>
                     <div class="stat-label">Bots Spawned (Total)</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon">💀</div>
-                    <div class="stat-value" id="bots-killed">-</div>
+                    <div class="stat-value" id="bots-killed">0</div>
                     <div class="stat-label">Bots Killed (Total)</div>
                 </div>
             </div>
