--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </div>
 
     <div class="container">
+        <!-- API Status Banner -->
+        <div id="api-status-banner" class="api-status-banner hidden">
+            <span>⚠️ API temporarily unavailable. Showing cached data.</span>
+        </div>
+        
         <header>
             <h1>🤖 PVPBOT Statistics</h1>
             <p class="subtitle">Real-time statistics from Minecraft servers</p>
