--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 <div class="chart-header">
                     <h3>Servers Online</h3>
                     <div class="time-selector">
+                        <button class="time-btn" data-period="10m" data-chart="servers">10M</button>
+                        <button class="time-btn" data-period="30m" data-chart="servers">30M</button>
                         <button class="time-btn active" data-period="1h" data-chart="servers">1H</button>
                         <button class="time-btn" data-period="1d" data-chart="servers">1D</button>
                         <button class="time-btn" data-period="1w" data-chart="servers">1W</button>
@@ -75,6 +77,8 @@
                 <div class="chart-header">
                     <h3>Bots Active</h3>
                     <div class="time-selector">
+                        <button class="time-btn" data-period="10m" data-chart="bots">10M</button>
+                        <button class="time-btn" data-period="30m" data-chart="bots">30M</button>
                         <button class="time-btn active" data-period="1h" data-chart="bots">1H</button>
                         <button class="time-btn" data-period="1d" data-chart="bots">1D</button>
                         <button class="time-btn" data-period="1w" data-chart="bots">1W</button>
